# sysinfod

./: configure.ac  sysinfo.pc.in
include/: sysinfo.h  sysinfo_dbus_names.h
src/: Makefile.am  entry.c  entry.h  sysinfo.c  sysinfod.c  sysinfod.xml
